@@ -8,6 +8,8 @@ Revision history for Perl extension Net::SSLeay.
      Added the X509_check_* functions introduced in OpenSSL 1.0.2, contributed
      by Carsten Gaebler.
      Added support for X509_V_FLAG_TRUSTED_FIRST constant, patch from Gisle Aas.
+     Patch allows get_keyblock_size to work correctly with 
+     OpenSSL 1.0.1 and later versions. Contributed by Heikki Vatiainen.
 
 1.68 2015-01-24
      Fixed a problem on OSX when macports openssl 1.x is installed: headers from
